--- a/index.html
+++ b/index.html
@@ -260,6 +260,24 @@
                                 <div class="text-sm font-medium">C#</div>
                             </div>
                         </div>
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
+                            <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
+                                <i class="fab fa-php text-2xl text-indigo-500 mb-2"></i>
+                                <div class="text-sm font-medium">PHP</div>
+                            </div>
+                            <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
+                                <i class="fas fa-gem text-2xl text-red-500 mb-2"></i>
+                                <div class="text-sm font-medium">Ruby</div>
+                            </div>
+                            <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
+                                <i class="fas fa-coffee text-2xl text-brown-500 mb-2"></i>
+                                <div class="text-sm font-medium">Groovy</div>
+                            </div>
+                            <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
+                                <i class="fas fa-clipboard-check text-2xl text-gray-500 mb-2"></i>
+                                <div class="text-sm font-medium">Manual</div>
+                            </div>
+                        </div>
                     </div>
                     <div class="bg-white dark:bg-gray-700 p-6 rounded-xl shadow-lg">
                         <div class="space-y-4">
