--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         }
     </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <style>
         html {
             scroll-behavior: smooth;
@@ -244,33 +245,33 @@
                         </p>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fab fa-java text-2xl text-orange-500 mb-2"></i>
+                                <i class="devicon-java-plain text-2xl text-orange-500 mb-2"></i>
                                 <div class="text-sm font-medium">Java</div>
                             </div>
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fab fa-python text-2xl text-blue-500 mb-2"></i>
+                                <i class="devicon-python-plain text-2xl text-blue-500 mb-2"></i>
                                 <div class="text-sm font-medium">Python</div>
                             </div>
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fab fa-js-square text-2xl text-yellow-500 mb-2"></i>
+                                <i class="devicon-javascript-plain text-2xl text-yellow-500 mb-2"></i>
                                 <div class="text-sm font-medium">JavaScript</div>
                             </div>
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fas fa-code text-2xl text-purple-500 mb-2"></i>
+                                <i class="devicon-csharp-plain text-2xl text-purple-500 mb-2"></i>
                                 <div class="text-sm font-medium">C#</div>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fab fa-php text-2xl text-indigo-500 mb-2"></i>
+                                <i class="devicon-php-plain text-2xl text-indigo-500 mb-2"></i>
                                 <div class="text-sm font-medium">PHP</div>
                             </div>
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fas fa-gem text-2xl text-red-500 mb-2"></i>
+                                <i class="devicon-ruby-plain text-2xl text-red-500 mb-2"></i>
                                 <div class="text-sm font-medium">Ruby</div>
                             </div>
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
-                                <i class="fas fa-coffee text-2xl text-brown-500 mb-2"></i>
+                                <i class="devicon-groovy-plain text-2xl text-blue-600 mb-2"></i>
                                 <div class="text-sm font-medium">Groovy</div>
                             </div>
                             <div class="bg-white dark:bg-gray-700 p-4 rounded-lg text-center shadow-sm">
